--- a/src/About.scss
+++ b/src/About.scss
@@ -81,10 +81,10 @@
       }
 
       .name {
-        color: $orange;
+        color: $black;
         font-size: 1.1rem;
         line-height: 24px;
-        font-weight: 400;
+        font-weight: 500;
         display: block;
         margin-top: 8px;
         margin-bottom: 1px;
