--- a/src/LoginAvatar.scss
+++ b/src/LoginAvatar.scss
@@ -9,6 +9,8 @@
   position: fixed;
   right: 1em;
   top: 12px;
+  border-radius:2px;
+  background:#444;
   
   button {
     height: 40px !important;
