--- a/src/components/MapVisualization/MapVisualization.scss
+++ b/src/components/MapVisualization/MapVisualization.scss
@@ -4,7 +4,8 @@
   @include media-breakpoint-down(md) {
     display: none;
   }
-
+  position:relative;
+  z-index:10;
   .map {
     width: 100%;
     height: 400px;
