--- a/src/components/SearchHit/SearchHit.scss
+++ b/src/components/SearchHit/SearchHit.scss
@@ -3,15 +3,24 @@
 .case-images {
   overflow: hidden;
   margin-bottom:10px;
-  min-height:160px;
+  height:180px;
+  max-width:400px;
+  @include media-breakpoint-up(md) {
+    height:160px;
+  }
+  @include media-breakpoint-up(xl) {
+    height:200px;
+  }
   img {
-    max-height: 160px;
-    max-width:100%;
+    width:100%;
+    height:auto;
+    position:relative;
+    top:50%;
+    transform:translate(0, -50%);
   }
 }
 
 .list-item, .grid-item {
-  padding-top: 28px;
   a:hover {
     text-decoration: none;
   }
@@ -34,13 +43,20 @@
 
 .thumbnail {
   width: 100%;
-  height: 160px;
+  max-width:400px;
+  height: 180px;
   background-size: cover;
   background-position: center;
   margin-bottom: 10px;
   background-color: $dark-grey;
   cursor: pointer;
   position:relative;
+  @include media-breakpoint-up(md) {
+    height:160px;
+  }
+  @include media-breakpoint-up(xl) {
+    height:200px;
+  }
   &:after {
     content:"";
     position:absolute;
