--- a/src/global.scss
+++ b/src/global.scss
@@ -75,7 +75,10 @@ a {
 }
 .leaflet-container {
   width: 100%;
-  height: 300px;
+  height: 400px;
   background-size: cover;
   background-position: center;
+}
+.leaflet-control-attribution {
+  display:none;
 }
