multiple upload for case edit

--- a/src/components/CaseEditor/CaseEditor.scss
+++ b/src/components/CaseEditor/CaseEditor.scss
@@ -42,6 +42,20 @@
         right: 0;
         background: #fff;
       }
+      .trash {
+        position: absolute;
+        width: 1.4rem;
+        height: 1.4rem;
+        bottom: 6px;
+        right:0;
+        background-image: url("../../img/trash.png");
+        background-repeat: no-repeat;
+        background-size: 0.9rem;
+        background-color: #fff;
+        background-position: center;
+        border: 1px solid black;
+        z-index: 1;
+      }
       small {
         background: #fff;
         position: absolute;
@@ -52,6 +66,10 @@
       text-align: center;
       &.lead {
         border: 4px solid $interactive-color;
+        .trash {
+          bottom: 1px;
+          border: none;
+        }
         .checkbox {
           background-image: url("../../img/check.png");
           background-repeat: no-repeat;
