--- a/src/Home.scss
+++ b/src/Home.scss
@@ -7,9 +7,13 @@
         margin-top: 5rem;
       }
       text-align: right;
-      p.dismiss {
+      .dismiss {
         margin: 0;
         cursor: pointer;
+        font-weight: 700;
+      }
+      svg {
+        transform: translate(0, 7px);
       }
     }
     h5 {
