--- a/src/quill.snow.scss
+++ b/src/quill.snow.scss
@@ -519,24 +519,26 @@
 .ql-snow .ql-direction.ql-active svg:first-child {
   display: none;
 }
-.ql-snow .ql-editor h1 {
-  font-size: 2em;
-}
-.ql-snow .ql-editor h2 {
-  font-size: 1.5em;
-}
-.ql-snow .ql-editor h3 {
-  font-size: 1.17em;
-}
-.ql-snow .ql-editor h4 {
-  font-size: 1em;
-}
-.ql-snow .ql-editor h5 {
-  font-size: 0.83em;
-}
-.ql-snow .ql-editor h6 {
-  font-size: 0.67em;
-}
+// These are not helpful
+
+// .ql-snow .ql-editor h1 {
+//   font-size: 2em;
+// }
+// .ql-snow .ql-editor h2 {
+//   font-size: 1.5em;
+// }
+// .ql-snow .ql-editor h3 {
+//   font-size: 1.17em;
+// }
+// .ql-snow .ql-editor h4 {
+//   font-size: 1em;
+// }
+// .ql-snow .ql-editor h5 {
+//   font-size: 0.83em;
+// }
+// .ql-snow .ql-editor h6 {
+//   font-size: 0.67em;
+// }
 .ql-snow .ql-editor a {
   text-decoration: underline;
 }
