--- a/src/components/CaseEditor/CaseEditor.scss
+++ b/src/components/CaseEditor/CaseEditor.scss
@@ -103,3 +103,18 @@
     }
   }
 }
+
+// quill
+.body-editor-box.fixed {
+  ._quill {
+    margin-top: 40px;  
+    .quill {
+      .ql-toolbar {
+        position: fixed;
+        top: 75px;
+        background-color: #fff;
+        z-index: 10;
+      }
+    }
+  }
+}
