--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -1,6 +1,12 @@
 @import "../../UniversalStyles";
 @import "../../../node_modules/react-image-gallery/styles/scss/image-gallery.scss";
 
+.single-image {
+  img {
+    max-width: 100%;
+  }
+}
+
 section.image-gallery {
   margin: 0 auto;
   .image-gallery-image {
