--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -192,7 +192,9 @@
 }
 
 // reset the extra padding in this div for consistency 
+// set max width for this element
 .container-fluid {
   padding-left:0;
   padding-right:0;
+  max-width:1440px;
 }
