--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -85,22 +85,35 @@ section.image-gallery {
     }
 
     .sub-sub-heading {
-      font-size: 14px;
+      font-size: 16px;
       font-weight: 500;
       color: $grey-text;
       line-height: 18px;
-      margin-bottom: 8px;
-      margin-top: 16px;
+      margin-bottom: 5px;
+      margin-top: 14px;
+      padding-top:14px;
+      border-top:1px solid $light-grey;
+    }
+    
+    .sub-sub-heading + div a {
+      color:$black;
+      font-size:14px;
+      position:relative;
+      text-decoration:underline;
+      &:hover {
+        color:$interactive-color;
+      }
     }
 
     .tags {
+      margin-top:18px;
       a {
         display: block;
         font-size: 14px;
         color: #888;
         font-weight: 400;
         line-height: 18px;
-        margin-bottom: 4px;
+        margin-bottom: 10px;
       }
     }
 
