--- a/src/Home.scss
+++ b/src/Home.scss
@@ -26,8 +26,25 @@
       margin-right: 1rem;
     }
     a.learn {
-      text-decoration: underline;
-      color: #000;
+      color: $black;
+      font-size:1.2rem;
+      position:relative;
+      &:after {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: -2px;
+        height: 2px;
+        background: #323232;
+      }
+      &:hover {
+        color:$interactive-color;
+        text-decoration:none;
+        &:after {
+          background:$interactive-color;
+        }
+      }
     }
   }
 }
