--- a/src/components/MapVisualization/MapVisualization.scss
+++ b/src/components/MapVisualization/MapVisualization.scss
@@ -6,6 +6,15 @@
   }
   position:relative;
   z-index:10;
+  &:before {
+    content:"";
+    position:absolute;
+    top:-3px;
+    height:3px;
+    left:0;
+    right:0;
+    background:$light-grey;
+  }
   .map {
     width: 100%;
     height: 400px;
