--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -36,6 +36,11 @@ section.image-gallery {
     .case-html {
       word-wrap: break-word;
     }
+    .vid-container {
+      @include media-breakpoint-down(lg) {
+        margin-bottom: 1rem;
+      }
+    }
   }
 
   .sidepanel {
