--- a/src/components/SearchResultsView/SearchResultsView.scss
+++ b/src/components/SearchResultsView/SearchResultsView.scss
@@ -23,7 +23,7 @@
       border-top: 1px solid $dark-grey;
       margin-top: 70px;
 
-      a {
+      div {
         font-size: 1rem;
         font-weight: 500;
         color: #666;
@@ -77,7 +77,7 @@
     float: left;
   }
 
-  .filters a {
+  .filters div {
     font-size: 1.2rem;
     font-weight: 600;
     color: $primary-color;
@@ -129,14 +129,15 @@
     }
   }
 
-  .filters a.selected {
+  .filters div.selected {
     background: transparent;
     border-bottom: 4px solid $black;
+    color: $interactive-color;
     &:hover {
       border-bottom: 4px solid darken($interactive-color,10%);
     }
   }
-  .filters a:hover {
+  .filters div:hover {
     text-decoration: none;
     color: $interactive-color;
     background: $light-grey;
@@ -145,7 +146,7 @@
       display:none;
     }
   }
-  .filters a:focus {
+  .filters div:focus {
     text-decoration:none;
   }
 
@@ -159,7 +160,7 @@
       margin-top:20px;
     }
 
-    a {
+    div {
       display: block;
       float: left;
 
@@ -181,7 +182,7 @@
       }
     }
 
-    a.selected, a:hover, a:focus {
+    div.selected, div:hover, div:focus {
       img:first-child {
         display: none;
       }
