--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -1,5 +1,12 @@
 @import "./UniversalStyles";
 
+.auth0-lock-header-welcome {
+  >div {
+    display: none;
+    padding-top: 1rem;
+  }
+}
+
 .contentArea {
   padding-top: 64px;
   min-height: 20em;
