--- a/src/components/MapVisualization/MapVisualization.scss
+++ b/src/components/MapVisualization/MapVisualization.scss
@@ -5,7 +5,13 @@
     display: none;
   }
   .mapboxgl-map {
-    width: 100%;
+    // See http://stackoverflow.com/questions/30489594/prevent-100vw-from-creating-horizontal-scroll
+    width: 100%; 
+    width: -webkit-calc(100vw);
+    width: -moz-calc(100vw);
+    width: calc(100vw);
+    max-width: 100%;
+
     .mapboxgl-popup {
       width: 300px;
     }
