--- a/src/components/SearchResultsView/SearchResultsView.scss
+++ b/src/components/SearchResultsView/SearchResultsView.scss
@@ -83,6 +83,7 @@
     font-size: 1.2rem;
     font-weight: 600;
     color: $primary-color;
+    text-transform: capitalize;
     display: block;
     line-height: 26px;
     padding: 18px 18px 14px;
