--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -62,7 +62,7 @@
     margin: 0 auto;
     overflow: hidden;
     padding-top: 64px;
-    padding-bottom: 8px;
+    padding-bottom: 20px;
     padding-left: 2em;
     padding-right: 2em;
 
@@ -88,4 +88,8 @@
       }
     }
   }
+}
+
+#us_report_button {
+  left:30px !important;
 }
