--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -176,7 +176,7 @@
   }
   &:before {
     @include media-breakpoint-up(sm) {
-      content:"Create";
+      content:"Quick Submit";
       position:relative;
       color:$black;
       font-weight:500;
