--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -81,7 +81,9 @@
       color: #fff;
       padding-top: 24px;
       float: right;
-
+      a {
+        color:#fff;   
+      }
       img {
         height: 16px;
         margin: 0px 8px -2px 0px;
