--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -47,11 +47,6 @@ section.image-gallery {
     padding: 0 30px;
     margin-top: 48px;
     position:relative;
-
-    svg.country-map {
-      border:2px solid $dark-grey;
-      padding:15px;
-    }
     
     .case-map {
       min-height: 100px;
@@ -89,13 +84,12 @@ section.image-gallery {
       text-transform: uppercase;
       margin-bottom: 10px;
       margin-top: 20px;
-      border-bottom:2px solid $dark-grey;
     }
 
     .sub-sub-heading {
       font-size: 16px;
       font-weight: 500;
-      color: $grey-text;
+      color: $black;
       line-height: 18px;
       margin-bottom: 5px;
       margin-top: 14px;
@@ -269,7 +263,7 @@ section.image-gallery {
 
       .case-title {
         color: $primary-color;
-        font-weight: 500;
+        font-weight: 600;
         margin-bottom: 48px;
         font-size:2.25rem;
         @include media-breakpoint-down(sm) { 
@@ -289,14 +283,14 @@ section.image-gallery {
 
         .author-line {
           font-size: 14px;
-          font-weight: 500;
+          font-weight: 600;
           color: $primary-color;
           line-height: 18px;
           margin-bottom:0;
 
           a {
             color: $primary-color;
-            font-weight: 600;
+            font-weight: 400;
             position:relative;
             cursor:pointer;
             &:after {
@@ -329,7 +323,7 @@ section.image-gallery {
 
       .case-html {
         h3 {
-          font-weight: 600;
+          font-weight: 500;
           line-height: 40px;
           margin-bottom: 12px;
           margin-top: 32px;
@@ -362,7 +356,7 @@ section.image-gallery {
 
         a {
           color: $primary-color;
-          font-weight: 600;
+          font-weight: 400;
           position:relative;
           cursor:pointer;
           &:after {
