--- a/src/components/SearchResultsView/SearchResultsView.scss
+++ b/src/components/SearchResultsView/SearchResultsView.scss
@@ -13,6 +13,7 @@
 .search-results-component {
 
   .sidepanel {
+    display:none; //sidebar override
     padding: 0 15px;
     @include media-breakpoint-up(lg) {
       padding:0 30px 0 15px;
@@ -181,6 +182,7 @@
     @include media-breakpoint-up(md) {
       padding-left:15px;
       padding-right:15px;
+      width:100%; //sidebar override
     }
   }
 }
@@ -201,15 +203,34 @@
         padding-right:0;
       }
     }
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(md) { //sidebar override - this whole block
       width:33.333333%;
       padding:0 24px 0 0;
       &:nth-child(2n+2) {
         padding-right:24px;
       }
+      &:nth-child(3n+3) { 
+        padding-right:0; 
+      }
+    }
+    @include media-breakpoint-up(lg) {
+      width:33.333333%;
+      width:25%; //sidebar override
+      padding:0 24px 0 0;
+      &:nth-child(2n+2) {
+        padding-right:24px;
+      }
+      &:nth-child(3n+3) {
+        padding-right:24px; //sidebar override
+      }
+      &:nth-child(4n+4) { 
+        padding-right:0; //sidebar override
+      }
+      /* don't delete - sidebar override
       &:nth-child(3n+3) {
         padding-right:0;
       }
+      */
     }
   }
   .col-md-12 {
