--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -19,27 +19,55 @@
 .drawer {
   div {
     z-index: 30000;
-    background-color: white;
+    // background-color: white;
     color: black;
     transition:background-color 0.25s;
   }
 
+  >div>div>a>div, >div>div>span>div {
+    padding-left:20px;
+  }
+
   > div:nth-child(2) {
-    padding: 140px 0 0 0;
-    @include media-breakpoint-up(md) {
-      padding: 65px 0 0 0;
+    @include media-breakpoint-down(md) {
+      padding: 140px 0 0 0;
     }
-   a {
-     background:#fff;
-     div {
-       padding-left:20px;
-     }
-     &:hover, &:focus {
+    padding: 70px 0 0 0;
+    a {
+      &:hover, &:focus {
        div {
          background-color:$dark-grey;
        }
-     }
-   }
+      }
+    }
+  }
+  .loginButtonMenu {
+    button {
+      height: 40px !important;
+      font-family:'Fakt' !important;
+      div {
+        border-radius:2px;
+        background:#444;
+        span {
+          color:white;
+          text-transform:none !important;
+          font-size:100% !important;
+        }
+      }
+    }
+  }
+  .profileButtonMenu {
+    height: 40px !important;
+    font-family:'Fakt' !important;
+    div {
+      border-radius:2px;
+      background:#444;
+      span {
+        color:white;
+        text-transform:none !important;
+        font-size:100% !important;
+      }
+    }
   }
 }
 
@@ -175,6 +203,8 @@
   padding:8px 14px 0;
   border-radius:2px;
   transition:background .2s;
+  color:$black;
+  font-weight:500;
   @include media-breakpoint-up(sm) {
     position:absolute;
     display:inline-block;
@@ -182,14 +212,6 @@
     right:120px;
     top:12px;
     right:120px;
-  }
-  &:before {
-    @include media-breakpoint-up(sm) {
-      content:"Quick Submit";
-      position:relative;
-      color:white;
-      font-weight:500;
-    }
   }
   &:after {
     content:"+";
@@ -204,6 +226,34 @@
   }
   &:hover {
     background:darken($interactive-color, 10%);
+  }
+}
+
+.quick-submit {
+  transition:background .2s;
+  color:$black;
+  font-weight:500;
+  &:after {
+    border-left:1px solid #fff;
+    color: #fff;
+  }
+  button {
+    height: 40px !important;
+    font-family:'Fakt' !important;
+    div {
+      border-radius:2px;
+      background:$interactive-color;
+      span {
+        color:white;
+        text-transform:none !important;
+        font-size:100% !important;
+        &:after {
+          content: '|  +';
+          padding-left: 9px;
+          white-space: pre;
+        }
+      }
+    }
   }
 }
 
