--- a/src/components/SearchHit/SearchHit.scss
+++ b/src/components/SearchHit/SearchHit.scss
@@ -39,6 +39,10 @@ small.label {
   a:hover {
     text-decoration: none;
   }
+  button {
+    float: right;
+    right: -7px;
+  }
 }
 
 .separator {
