--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -25,7 +25,10 @@
   }
 
   > div:nth-child(2) {
-   padding: 140px 0 0 0;
+    padding: 140px 0 0 0;
+    @include media-breakpoint-up(md) {
+      padding: 65px 0 0 0;
+    }
    a {
      background:#fff;
      div {
