Hide footer tagline 367

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -22,6 +22,9 @@
 
       &.xl {
         width: 320px;
+        @include media-breakpoint-down(sm) {
+          display:none;
+        }
       }
 
       &.right {
