bookmark and share icons to hug centre column 366

--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -36,6 +36,7 @@ section.image-gallery {
     margin:0;
   }
   .main-area {
+    max-width:800px;
     .case-html {
       word-wrap: break-word;
     }
