make footer black 363

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 @import "./UniversalStyles";
 
 .footer-component {
-  background-color: $primary-color;
+  background-color: #222;
   overflow: hidden;
   z-index: 1000;
   position: absolute;
