--- a/src/components/MapVisualization/MapVisualization.scss
+++ b/src/components/MapVisualization/MapVisualization.scss
@@ -14,6 +14,9 @@
 
     .mapboxgl-popup {
       width: 300px;
+      a {
+        color:$interactive-color;
+      }
     }
   }
   position:relative;
