added bookmark icons

--- a/src/components/SearchResultsView/SearchResultsView.scss
+++ b/src/components/SearchResultsView/SearchResultsView.scss
@@ -298,6 +298,7 @@ div h3.searching-message {
 }
 
 .mobile-select {
+  text-transform: capitalize;
   width: 100%;
   color: $interactive-color;
   padding: 7px;
