using only certain parts of bootstrap

--- a/src/UniversalStyles.scss
+++ b/src/UniversalStyles.scss
@@ -1,5 +1,7 @@
-@import '../node_modules/bootstrap/scss/_variables';
-@import '../node_modules/bootstrap/scss/mixins/_breakpoints';
+@import 'bootstrap-custom';
+// @import '../node_modules/bootstrap/scss/_variables';
+// @import '../node_modules/bootstrap/scss/bootstrap-grid';
+// @import '../node_modules/bootstrap/scss/mixins/_breakpoints';
 $blue: #3f51b2;
 $orange: #ff6f00;
 $black: #323232;
