Add logic to indicate when the submit button can't be pushed (because incomplete)

--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -415,3 +415,8 @@ section.image-gallery {
     background-color: $interactive-color !important;
   }
 }
+
+.incomplete {
+  padding-left: 1em;
+  color: darkred;
+}
