--- a/src/components/SearchResultsView/SearchResultsView.scss
+++ b/src/components/SearchResultsView/SearchResultsView.scss
@@ -265,9 +265,14 @@
   font-weight:600;
   font-size:20px;
 }
+.search-description-text {
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 25px;
+}
 div h3.searching-message {
-  font-size:20px;
-  font-weight:600;
+  font-size:16px;
+  font-weight:400;
   margin-top:30px;
 }
 .search-term {
@@ -338,5 +343,9 @@ div h3.searching-message {
 }
 
 .spinner {
-  padding: 2em;
+  background-image: url("../../img/loading-dots.gif");
+  background-repeat:no-repeat;
+  background-position:center center;
+  display:inline-block;
+  width:34px; height:20px; margin-left:5px; position:relative; top:5px;
 }
